--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
