--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
