--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "18.16.0",
     "npm": "9.5.1"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bson": "^5.3.0",
@@ -33,7 +33,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
