--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "dotenv": "^16.3.1",
     "engine.io": "^6.5.0",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^5.6.0",
     "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^7.3.1",
