--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "engine.io": "^6.5.0",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "mongodb": "^5.6.0",
