--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^5.6.0",
     "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^7.3.1",
