--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bson": "^5.3.0",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
