--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^1.19.4",
     "openai": "^3.2.1",
     "path": "^0.12.7",
