--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jsdom": "^22.1.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.6.0",
     "mongodb-connection-string-url": "^2.6.0",
@@ -31,6 +32,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "selenium-webdriver": "^4.10.0",
     "serve": "^14.2.0",
     "socket.io": "^4.7.0",
     "web-vitals": "^2.1.4",
